# jetbrains-challenge-rust-web-server

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  diesel.toml  example.env
assets/: main.css
migrations/2024-09-30-095942_create_posts/: down.sql  up.sql
src/: api.rs  client.rs  error.rs  main.rs  model.rs
src/persistence/: mod.rs  model.rs  schema.rs  sql.rs
src/routes/: images.rs  mod.rs  posts.rs
src/server/: images.rs  mod.rs
src/server/persistence/: database.rs
