[package]
name = "jetbrains-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
leptos = "0.6.15"
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.1", features = ["fs", "set-header"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
anyhow = "1.0.89"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
r2d2 = "0.8.10"
