[package]
name = "blogposts"
version = "0.1.0"
authors = ["Michael Dyer <michaelowendyer@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-logger = "0.5.1" # Contains logging abstraction over tracing
tracing = { version = "0.1.40" }
time = { version = "0.3.36", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
dotenvy = "0.15.7"

# Server-only dependencies
tokio = { version = "1.40.0", optional = true }
axum = { version = "0.7.7", features = ["macros"], optional = true }
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time", "r2d2"], optional = true }
diesel_migrations = { version = "2.2.0", features = ["sqlite"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
http = { version = "1.1.0", optional = true }
uuid = { version = "1.10.0", features = ["v4", "serde", "js"], optional = true }
reqwest = { version = "0.12.8", optional = true }
image = { version = "0.25.4", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
server = [
    "dioxus/axum",
    "tokio",
    "axum",
    "diesel",
    "diesel_migrations",
    "r2d2",
    "http",
    "uuid",
    "reqwest",
    "image",
    "base64",
]
web = [
    "dioxus/web",
]
